--- a/technical_analysis/visualizations_output/agricultural_commodities_scores.html
+++ b/technical_analysis/visualizations_output/agricultural_commodities_scores.html
@@ -79,7 +79,13 @@
         <p style="margin: 5px 0; font-size: 0.9em; color: #666;">
             Potential percentages show how far price could move to reach recent highs/lows based on 52-week range (252 trading days).
         </p>
+    </div>    <div class="legend" style="margin-top: 15px; background: #f0f4f8; padding: 10px; border-left: 4px solid #2c3e50;">
+        <h3 style="margin-top: 0;">CME Sunday 6pm ET Open (market hand)</h3>
+        <p style="margin: 5px 0; color: #333;">Direction from CME open (first 24h or weekly gap). Icon only, not part of score.</p>
+        <p style="margin: 8px 0;"><span class="cme-item" title="CME Sunday 6pm ET">BTC: <strong>↑↑</strong> +2.16%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">ETH: <strong>↑↑</strong> +4.43%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">GC (fut): <strong>↑</strong> +0.29%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SI (fut): <strong>↑↑</strong> +1.75%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">HG (fut): <strong>↓↓</strong> -0.82%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">CL (fut): <strong>↓</strong> -0.08%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SPY: <strong>↑</strong> +0.18%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">QQQ: <strong>↑</strong> +0.08%</span></p>
+        <p style="margin: 5px 0; font-size: 0.85em; color: #666;">↑↑ strong up &nbsp; ↑ up &nbsp; → flat &nbsp; ↓ down &nbsp; ↓↓ strong down</p>
     </div>
+
     
     <table>
         <thead>
@@ -108,18 +114,18 @@
         <tbody>
             <tr>
                 <td><strong>ZC=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.4</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.3</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -129,18 +135,18 @@
             </tr>
             <tr>
                 <td><strong>ZS=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-2.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -150,18 +156,18 @@
             </tr>
             <tr>
                 <td><strong>ZW=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.4</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>12.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>12.1</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.4</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.6</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.3</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -171,18 +177,18 @@
             </tr>
             <tr>
                 <td><strong>KC=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -192,18 +198,18 @@
             </tr>
             <tr>
                 <td><strong>CT=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>17.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>16.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>15.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.4</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>14.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>12.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>11.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -213,18 +219,18 @@
             </tr>
             <tr>
                 <td><strong>SB=F</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.7</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.6</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>12.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
