--- a/technical_analysis/visualizations_output/financials_scores.html
+++ b/technical_analysis/visualizations_output/financials_scores.html
@@ -79,7 +79,13 @@
         <p style="margin: 5px 0; font-size: 0.9em; color: #666;">
             Potential percentages show how far price could move to reach recent highs/lows based on 52-week range (252 trading days).
         </p>
+    </div>    <div class="legend" style="margin-top: 15px; background: #f0f4f8; padding: 10px; border-left: 4px solid #2c3e50;">
+        <h3 style="margin-top: 0;">CME Sunday 6pm ET Open (market hand)</h3>
+        <p style="margin: 5px 0; color: #333;">Direction from CME open (first 24h or weekly gap). Icon only, not part of score.</p>
+        <p style="margin: 8px 0;"><span class="cme-item" title="CME Sunday 6pm ET">BTC: <strong>↑↑</strong> +2.16%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">ETH: <strong>↑↑</strong> +4.43%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">GC (fut): <strong>↑</strong> +0.29%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SI (fut): <strong>↑↑</strong> +1.75%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">HG (fut): <strong>↓↓</strong> -0.82%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">CL (fut): <strong>↓</strong> -0.08%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SPY: <strong>↑</strong> +0.18%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">QQQ: <strong>↑</strong> +0.08%</span></p>
+        <p style="margin: 5px 0; font-size: 0.85em; color: #666;">↑↑ strong up &nbsp; ↑ up &nbsp; → flat &nbsp; ↓ down &nbsp; ↓↓ strong down</p>
     </div>
+
     
     <table>
         <thead>
@@ -108,18 +114,18 @@
         <tbody>
             <tr>
                 <td><strong>JPM</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.3</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -129,18 +135,18 @@
             </tr>
             <tr>
                 <td><strong>BAC</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>11.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -150,38 +156,17 @@
             </tr>
             <tr>
                 <td><strong>WFC</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.9</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
-            </tr>
-            <tr>
-                <td><strong>GS</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.3</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.1</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -191,19 +176,40 @@
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
             </tr>
             <tr>
-                <td><strong>MS</strong></td>
+                <td><strong>GS</strong></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-1.4</div></td>
                 <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.4</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.7</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
+            </tr>
+            <tr>
+                <td><strong>MS</strong></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -213,18 +219,18 @@
             </tr>
             <tr>
                 <td><strong>C</strong></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #FF4500;'>-2.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFA500;'>-0.3</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
