--- a/technical_analysis/visualizations_output/precious_metals_scores.html
+++ b/technical_analysis/visualizations_output/precious_metals_scores.html
@@ -79,7 +79,13 @@
         <p style="margin: 5px 0; font-size: 0.9em; color: #666;">
             Potential percentages show how far price could move to reach recent highs/lows based on 52-week range (252 trading days).
         </p>
+    </div>    <div class="legend" style="margin-top: 15px; background: #f0f4f8; padding: 10px; border-left: 4px solid #2c3e50;">
+        <h3 style="margin-top: 0;">CME Sunday 6pm ET Open (market hand)</h3>
+        <p style="margin: 5px 0; color: #333;">Direction from CME open (first 24h or weekly gap). Icon only, not part of score.</p>
+        <p style="margin: 8px 0;"><span class="cme-item" title="CME Sunday 6pm ET">BTC: <strong>↑↑</strong> +2.16%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">ETH: <strong>↑↑</strong> +4.43%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">GC (fut): <strong>↑</strong> +0.29%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SI (fut): <strong>↑↑</strong> +1.75%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">HG (fut): <strong>↓↓</strong> -0.82%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">CL (fut): <strong>↓</strong> -0.08%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">SPY: <strong>↑</strong> +0.18%</span> &nbsp;|&nbsp; <span class="cme-item" title="CME Sunday 6pm ET">QQQ: <strong>↑</strong> +0.08%</span></p>
+        <p style="margin: 5px 0; font-size: 0.85em; color: #666;">↑↑ strong up &nbsp; ↑ up &nbsp; → flat &nbsp; ↓ down &nbsp; ↓↓ strong down</p>
     </div>
+
     
     <table>
         <thead>
@@ -110,16 +116,16 @@
                 <td><strong>GC=F</strong></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.4</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.1</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.2</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.5</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>7.6</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -129,18 +135,18 @@
             </tr>
             <tr>
                 <td><strong>SI=F</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.6</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.4</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.8</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #CCCCCC;'>N/A</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -150,18 +156,18 @@
             </tr>
             <tr>
                 <td><strong>PA=F</strong></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.4</div></td>
                 <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>10.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.8</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.0</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.8</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.3</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.2</div></td>
-                <td><div class='score-cell' style='background-color: #32CD32;'>5.5</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.3</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.9</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.2</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.6</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>3.6</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>1.2</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
@@ -171,18 +177,18 @@
             </tr>
             <tr>
                 <td><strong>PL=F</strong></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.1</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>6.6</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>7.2</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.8</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.0</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.7</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.1</div></td>
                 <td><div class='score-cell' style='background-color: #006400;'>8.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>9.5</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>3.5</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.0</div></td>
-                <td><div class='score-cell' style='background-color: #90EE90;'>2.8</div></td>
-                <td><div class='score-cell' style='background-color: #FFD700;'>1.7</div></td>
-                <td><div class='score-cell' style='background-color: #006400;'>8.8</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>8.1</div></td>
+                <td><div class='score-cell' style='background-color: #90EE90;'>2.5</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.2</div></td>
+                <td><div class='score-cell' style='background-color: #006400;'>6.1</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>4.1</div></td>
+                <td><div class='score-cell' style='background-color: #FFD700;'>0.2</div></td>
+                <td><div class='score-cell' style='background-color: #32CD32;'>5.6</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
                 <td><div class='score-cell' style='background-color: #FFD700;'>0</div></td>
